--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ license = "MIT"
 
 [dependencies]
 alfred = "4"
-ureq = { version = "1.3", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.47"
+base64 = "0.13"
+ureq = { version = "2", features = ["json"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
 
 [profile.release]
