--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,8 @@ license = "MIT"
 
 [dependencies]
 alfred = "4"
-base64 = "0.13"
-ureq = { version = "2", features = ["json"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-chrono = { version = "0.4", features = ["serde"] }
+checkvist = { path = "../checkvist-rs" }
+#checkvist = "0.1"
 
 [profile.release]
 lto = true
